# maidsafe_autonomi

./: .clippy.toml  .cursorrules  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  mkdocs.yml  release-cycle-info  release-plz.toml  reviewpad.yml  test.sh  test_runner.py
ant-bootstrap/: Cargo.toml  README.md
ant-bootstrap/src/: bootstrap.rs  cache_store.rs  config.rs  contacts.rs  contacts_fetcher.rs  error.rs  initial_peers.rs  lib.rs
ant-bootstrap/src/cache_store/: cache_data_v0.rs  cache_data_v1.rs  mod.rs
ant-bootstrap/tests/: address_format_tests.rs  cache_tests.rs  cli_integration_tests.rs  contacts.rs  e2e.rs  version.rs
ant-networking/: Cargo.toml  README.md
ant-networking/src/: bootstrap.rs  cmd.rs  config.rs  driver.rs  error.rs  external_address.rs  graph.rs  lib.rs  linked_list.rs  network_builder.rs  network_discovery.rs  record_store.rs  record_store_api.rs  relay_manager.rs  replication_fetcher.rs  time.rs  transactions.rs  transport.rs
ant-networking/src/behaviour/: do_not_disturb.rs  mod.rs
ant-networking/src/event/: identify.rs  kad.rs  mod.rs  request_response.rs  swarm.rs
ant-networking/src/metrics/: bad_node.rs  mod.rs  service.rs  upnp.rs
ant-node/: Cargo.toml  README.md  pyproject.toml
ant-node-manager/: Cargo.toml  README.md
ant-node-manager/src/: config.rs  error.rs  helpers.rs  lib.rs  local.rs  rpc.rs  rpc_client.rs
ant-node-manager/src/add_services/: config.rs  mod.rs  tests.rs
ant-node-manager/src/cmd/: auditor.rs  daemon.rs  faucet.rs  local.rs  mod.rs  nat_detection.rs  node.rs
ant-node-manager/tests/: e2e.rs  utils.rs
ant-node-nodejs/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
ant-node-nodejs/__test__/: spawner.spec.mjs
ant-node-nodejs/examples/: spawn_local_network.mjs
ant-node-nodejs/npm/darwin-arm64/: README.md  package.json
ant-node-nodejs/npm/darwin-x64/: README.md  package.json
ant-node-nodejs/npm/linux-x64-gnu/: README.md  package.json
ant-node-nodejs/npm/win32-x64-msvc/: README.md  package.json
ant-node-nodejs/src/: lib.rs
ant-node-rpc-client/: Cargo.toml
ant-node-rpc-client/src/: main.rs
ant-node/examples/: README.md  spawn_local_network.rs  spawn_node.rs  spawn_nodes_on_mainnet.rs
ant-node/python/: example.py  example_spawn.py
ant-node/python/antnode/: README.md  __init__.py
ant-node/python/safenode/: __init__.py
ant-node/reactivate_examples/: register_inspect.rs
ant-node/src/: error.rs  event.rs  lib.rs  log_markers.rs  metrics.rs  node.rs  put_validation.rs  python.rs  quote.rs  replication.rs  utils.rs
ant-node/src/networking/: bootstrap.rs  circular_vec.rs  cmd.rs  config.rs  driver.rs  error.rs  external_address.rs  log_markers.rs  mod.rs  network_builder.rs  network_discovery.rs  record_store.rs  relay_manager.rs  replication_fetcher.rs  time.rs  transport.rs
ant-node/src/spawn/: mod.rs  network.rs  network_spawner.rs  node.rs  node_spawner.rs
ant-node/tests/: data_with_churn.rs  storage_payments.rs  verify_data_location.rs  verify_routing_table.rs
ant-node/tests/common/: client.rs  mod.rs
ant-protocol/: Cargo.toml  README.md  build.rs
ant-protocol/src/: constants.rs  error.rs  lib.rs  messages.rs  peer_id_serde.rs  version.rs
ant-protocol/src/messages/: cmd.rs  connection_info.rs  merkle_tree.rs  query.rs  response.rs
ant-protocol/src/storage/: chunks.rs  graph.rs  header.rs  linked_list.rs  mod.rs  pointer.rs  scratchpad.rs
ant-service-management/: Cargo.toml  build.rs  test_usb_node_tracking.rs
ant-service-management/src/: auditor.rs  control.rs  daemon.rs  error.rs  faucet.rs  lib.rs  node.rs  registry.rs  rpc.rs
ant-service-management/src/node/: VERSION_GUIDE.md  mod.rs  node_service_data.rs  node_service_data_v0.rs  node_service_data_v1.rs  node_service_data_v2.rs  tests.rs
ant-service-management/tests/: usb_node_tracking_fix.rs
autonomi/: Cargo.toml  README.md  README_PYTHON.md  pyproject.toml  setup.py
autonomi/examples/: chunk_batch_upload.rs  data_and_archive.rs  network_spawner.rs  put_and_dir_upload.rs  simple_example_scratchpad.rs
autonomi/python/autonomi_client/: __init__.py
autonomi/python/examples/: autonomi_example.py  autonomi_pointers.py  autonomi_private_data.py  autonomi_private_encryption.py  autonomi_scratchpad.py  autonomi_vault.py  basic.py  scratchpad_fork_display_and_resolution.py  simple_example_scratchpad.py
autonomi/src/: lib.rs  python.rs  self_encryption.rs  utils.rs
autonomi/src/client/: analyze.rs  chunk_cache.rs  config.rs  data_map_restoration.rs  encryption.rs  external_signer.rs  graph.rs  key_derivation.rs  linked_list.rs  mod.rs  (+11 more)
autonomi/tests/: address.rs  analyze.rs  backward_compatibility.rs  chunk.rs  chunk_cache_integration.rs  external_signer.rs  files.rs  fs.rs  graph.rs  key_derivation.rs  network.rs  payment_modes.rs  pointer.rs  put.rs  register.rs  registers.rs  scratchpad.rs  self_encryption.rs  streaming_data_map_deserialization.rs  streaming_download.rs  transaction.rs  vault.rs  wallet.rs
autonomi/tests-js/: package-lock.json
evm-testnet/: Cargo.toml  README.md
evm-testnet/src/: main.rs
evmlib/: Cargo.toml  foundry.toml
evmlib/abi/: IMerklePaymentVault.json  IPaymentVaultV2.json  IPaymentVaultV6.json
evmlib/artifacts/: MerklePaymentVault.json  PaymentVaultNoProxyV2.json  PaymentVaultNoProxyV5.json  PaymentVaultNoProxyV6.json
evmlib/contracts/: IMerklePaymentVault.sol  MerklePaymentVault.sol
evmlib/src/: cryptography.rs  external_signer.rs  lib.rs  merkle_batch_payment.rs  quoting_metrics.rs  retry.rs  testnet.rs  transaction_config.rs  utils.rs  wallet.rs
evmlib/tests/: cryptography.rs  gas_fee_limit.rs  network_token.rs  payment_vault.rs  wallet.rs
nodejs/: Cargo.toml  README.md  index.d.ts  index.js  jest.config.js  package-lock.json  package.json  tsconfig.json
nodejs/__test__/: archive.spec.mjs  data.spec.mjs  graph_entry.spec.mjs  index.spec.mjs  pointer.spec.mjs  scratchpad.spec.mjs
nodejs/src/: client.ts  index.ts  lib.rs  types.ts
nodejs/tests/: client.test.ts
(+309 files in other folders)
