[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Networking infrastructure for Autonomi"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ant-networking"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"
version = "0.3.8"

[features]
default = []
loud = []
open-metrics = ["libp2p/metrics", "prometheus-client", "hyper", "sysinfo"]

[dependencies]
aes-gcm-siv = "0.11.1"
ant-bootstrap = { path = "../ant-bootstrap", version = "0.2.0" }
ant-build-info = { path = "../ant-build-info", version = "0.1.26" }
ant-evm = { path = "../ant-evm", version = "0.1.11" }
ant-protocol = { path = "../ant-protocol", version = "1.0.2" }
async-trait = "0.1"
bls = { package = "blsttc", version = "8.0.2" }
bytes = { version = "1.0.1", features = ["serde"] }
custom_debug = "~0.6.1"
exponential-backoff = "2.0.0"
futures = "~0.3.13"
hex = "~0.4.3"
hkdf = "0.12"
hyper = { version = "0.14", features = [
    "server",
    "tcp",
    "http1",
], optional = true }
itertools = "~0.12.1"
libp2p = { version = "0.55.0", features = [
    "tokio",
    "dns",
    "upnp",
    "kad",
    "macros",
    "request-response",
    "cbor",
    "identify",
    "quic",
    "relay",
    "noise",
    "tcp",
    "yamux",
    "websocket",
] }
prometheus-client = { version = "0.22", optional = true }
rand = { version = "~0.8.5", features = ["small_rng"] }
rayon = "1.8.0"
rmp-serde = "1.1.1"
serde = { version = "1.0.133", features = ["derive", "rc"] }
sha2 = "0.10"
strum = { version = "0.26.2", features = ["derive"] }
sysinfo = { version = "0.30.8", default-features = false, optional = true }
thiserror = "1.0.23"
tokio = { version = "1.32.0", features = [
    "io-util",
    "macros",
    "rt",
    "sync",
    "time",
] }
tracing = { version = "~0.1.26" }
void = "1.0.2"
walkdir = "~2.5.0"
xor_name = "5.0.0"

[dev-dependencies]
assert_fs = "1.0.0"
eyre = "0.6.8"
# add rand to libp2p
libp2p-identity = { version = "0.2.7", features = ["rand"] }
quickcheck = "1.0.3"
uuid = { version = "1.5.0", features = ["v4"] }

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
