[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "RPC client for the Autonomi node"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ant-node-rpc-client"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"
version = "0.6.47"

[[bin]]
name = "antnode_rpc_client"
path = "src/main.rs"

[features]
nightly = []

[dependencies]
ant-build-info = { path = "../ant-build-info", version = "0.1.28" }
ant-logging = { path = "../ant-logging", version = "0.2.50" }
ant-protocol = { path = "../ant-protocol", version = "1.0.6", features=["rpc"] }
ant-node = { path = "../ant-node", version = "0.4.1" }
ant-service-management = { path = "../ant-service-management", version = "0.4.14" }
async-trait = "0.1"
bls = { package = "blsttc", version = "8.0.1" }
clap = { version = "4.2.1", features = ["derive"] }
color-eyre = "0.6.3"
hex = "~0.4.3"
libp2p = { version = "0.55.0", features = ["kad"]}
libp2p-identity = { version="0.2.7", features = ["rand"] }
thiserror = "1.0.23"
# # watch out updating this, protoc compiler needs to be installed on all build systems
# # arm builds + musl are very problematic
tonic = { version = "0.6.2" }
tokio = { version = "1.43.1", features = ["rt"] }
tokio-stream = { version = "~0.1.12" }
tracing = { version = "~0.1.26" }
tracing-core = "0.1.30"

[lints]
workspace = true
