[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "A command-line application for installing, managing and operating `antnode` as a service."
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ant-service-management"
readme = "README.md"
repository = "https://github.com/maidsafe/autonomi"
version = "0.4.11"

[dependencies]
ant-bootstrap = { path = "../ant-bootstrap", version = "0.2.0" }
ant-evm = { path = "../ant-evm", version = "0.1.12" }
ant-logging = { path = "../ant-logging", version = "0.2.48" }
ant-protocol = { path = "../ant-protocol", version = "1.0.3", features = ["rpc"] }
async-trait = "0.1"
dirs-next = "2.0.0"
libp2p = { version = "0.55.0", features = ["kad"] }
libp2p-identity = { version = "0.2.7", features = ["rand"] }
prost = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0.20"
service-manager = "0.8.0"
sysinfo = "0.30.12"
thiserror = "1.0.23"
tokio = { version = "1.32.0", features = ["time"] }
tonic = { version = "0.6.2" }
tracing = { version = "~0.1.26" }
tracing-core = "0.1.30"
chrono = "0.4.39"

[build-dependencies]
# watch out updating this, protoc compiler needs to be installed on all build systems
# arm builds + musl are very problematic
tonic-build = { version = "~0.6.2" }

[dev-dependencies]
mockall = "0.11.3"
