[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["extension-module"]
module-name = "autonomi_client"
bindings = "pyo3"

[project]
name = "autonomi-client"
dynamic = ["version"]
description = "Autonomi client API"
readme = "README_PYTHON.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0" }
authors = [{ name = "MaidSafe Developers", email = "dev@maidsafe.net" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
addopts = "-v -s"
