[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "autonomi-client"
dynamic = ["version"]
description = "Autonomi client API"
authors = [{ name = "MaidSafe Developers", email = "dev@maidsafe.net" }]
dependencies = [
    "maturin>=1.7.4",
    "pip>=24.0",
    "pytest>=8.3.4",
]
readme = "README_PYTHON.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://maidsafe.net"
Repository = "https://github.com/maidsafe/autonomi"

[tool.maturin]
features = ["extension-module"]
module-name = "autonomi_client"
python-source = "python"
bindings = "pyo3"
include = ["README_PYTHON.md", "src/*", "python/*", "pyproject.toml"]
manifest-path = "Cargo.toml"
sdist-include = [
    "README_PYTHON.md",
    "src/**/*",
    "python/**/*",
    "pyproject.toml",
    "Cargo.toml",
    "../ant-*/**/*",
    "../test-utils/**/*",
    "../evmlib/**/*",
    "../Cargo.toml",
]
workspace = false
profile = "release"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
addopts = "-v -s"
