[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "EVM testnet for development on Autonomi"
edition = "2024"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "evm-testnet"
repository = "https://github.com/maidsafe/autonomi"
version = "0.1.16"

[dependencies]
ant-evm = { path = "../ant-evm", version = "0.1.17" }
clap = { version = "4.5", features = ["derive"] }
dirs-next = "~2.0.0"
evmlib = { path = "../evmlib", version = "0.4.5-rc.3" }
tokio = { version = "1.43", features = ["rt-multi-thread", "signal"] }

[lints]
workspace = true
