[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Safe Network EVM"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "evmlib"
repository = "https://github.com/maidsafe/autonomi"
version = "0.4.0"

[features]
external-signer = []

[dependencies]
alloy = { version = "0.15.6", default-features = false, features = ["contract", "json-rpc", "network", "node-bindings", "provider-http", "reqwest-rustls-tls", "rpc-client", "rpc-types", "signer-local", "std"] }
dirs-next = "~2.0.0"
serde = "1"
serde_with = { version = "3.11.0", features = ["macros"] }
thiserror = "1.0"
tracing = { version = "~0.1.26" }
tokio = "1.43.1"
rand = "0.8.5"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
