[package]
edition = "2021"
name = "autonomi-nodejs"
version = "0.1.0"
description = "NodeJS bindings for the autonomi client"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
autonomi = { path = "../autonomi" }
bytes = { version = "1.0.1", features = ["serde"] }
eyre = "0.6.12"
futures = "0.3"
napi = { version = "2.12.2", default-features = false, features = ["napi4", "napi6", "tokio_rt", "serde-json"] }
napi-derive = "2.12.2"
rand = "0.8.5"
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"
